loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue364_filtered_list_comp_borrow.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Clone, Debug, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct StoredNode {
    store_id_raw: i64,
    node: String,
}
impl incan_std_core::reflection::HasClassName for StoredNode {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_std_core::reflection::HasTypeClassName for StoredNode {
    fn __class_name__() -> &'static str {
        "StoredNode"
    }
}
impl incan_std_core::reflection::HasFieldMetadata for StoredNode {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_std_core::reflection::HasTypeFieldMetadata for StoredNode {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 2] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("store_id_raw"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("store_id_raw"),
                type_name: incan_std_core::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("node"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("node"),
                type_name: incan_std_core::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_std_core::reflection::HasFieldValueReflection for StoredNode {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "store_id_raw" => Some(format!("{}", self.store_id_raw)),
            "node" => Some(format!("{}", self.node)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![
            ("store_id_raw".to_string(), format!("{}", self.store_id_raw)), ("node"
            .to_string(), format!("{}", self.node))
        ]
    }
}
fn store_nodes(store_id: i64, stored_nodes: Vec<StoredNode>) -> Vec<String> {
    return ((stored_nodes).into_iter())
        .filter_map(|stored| {
            if stored.store_id_raw == store_id { Some(stored.node) } else { None }
        })
        .collect::<Vec<_>>();
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let nodes: Vec<StoredNode> = vec![
        StoredNode { store_id_raw : 1, node : "a".to_string() }, StoredNode {
        store_id_raw : 2, node : "b".to_string() }
    ];
    let _ = println!(
        "{}", incan_std_core::collections::list_get(& store_nodes(1, nodes), (0) as i64)
        .clone()
    );
}
