loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue366_clone_self_string_field.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
pub struct ActiveRegistration {
    pub logical_name: String,
    pub rank: i64,
}
impl incan_std_core::reflection::HasClassName for ActiveRegistration {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_std_core::reflection::HasTypeClassName for ActiveRegistration {
    fn __class_name__() -> &'static str {
        "ActiveRegistration"
    }
}
impl incan_std_core::reflection::HasFieldMetadata for ActiveRegistration {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_std_core::reflection::HasTypeFieldMetadata for ActiveRegistration {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 2] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("logical_name"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("logical_name"),
                type_name: incan_std_core::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("rank"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("rank"),
                type_name: incan_std_core::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_std_core::reflection::HasFieldValueReflection for ActiveRegistration {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "logical_name" => Some(format!("{}", self.logical_name)),
            "rank" => Some(format!("{}", self.rank)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![
            ("logical_name".to_string(), format!("{}", self.logical_name)), ("rank"
            .to_string(), format!("{}", self.rank))
        ]
    }
}
impl ActiveRegistration {
    pub fn clone(&self) -> Self {
        return ActiveRegistration {
            logical_name: self.logical_name.clone(),
            rank: self.rank,
        };
    }
    /// Returns field metadata for this type.
    pub fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 2] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("logical_name"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("logical_name"),
                type_name: incan_std_core::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("rank"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("rank"),
                type_name: incan_std_core::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let reg = ActiveRegistration {
        logical_name: "orders".to_string(),
        rank: 1,
    };
    let copied = reg.clone();
    let _ = println!("{}", copied.logical_name);
}
