loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue367_result_ok_string_literal.snap
---
source: loaves/compiler/incan_emit/tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn takes_result(value: Result<String, String>) {
    let _ = match value {
        Ok(msg) => {
            let _ = println!("{}", msg);
        }
        Err(err) => {
            let _ = println!("{}", err);
        }
    };
}
fn returns_result() -> Result<String, String> {
    return Ok::<String, String>("from_return".to_string());
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let direct: Result<String, String> = Ok::<String, String>("from_local".to_string());
    let _ = match direct {
        Ok(msg) => {
            let _ = println!("{}", msg);
        }
        Err(err) => {
            let _ = println!("{}", err);
        }
    };
    let _ = takes_result(Ok::<String, String>("from_call".to_string()));
    let result: Result<String, String> = returns_result();
    let _ = match result {
        Ok(msg) => {
            let _ = println!("{}", msg);
        }
        Err(err) => {
            let _ = println!("{}", err);
        }
    };
}
