loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue372_imported_enum_loop_ownership.snap
---
source: loaves/compiler/incan_emit/tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use crate::rels::ConformanceRel;
fn relation_kind_name_from_conformance(rel: &ConformanceRel) -> String {
    let _ = match rel {
        ConformanceRel::Read => {
            return "ReadRel".to_string();
        }
        _ => {
            return "Other".to_string();
        }
    };
}
fn scenario_matches(required: Vec<ConformanceRel>) -> bool {
    for expected in required.iter().cloned() {
        if expected == ConformanceRel::Read {
            if incan_std_core::strings::str_eq(
                &relation_kind_name_from_conformance(&expected),
                &"ReadRel",
            ) {
                return true;
            }
        }
    }
    return false;
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = println!("{}", scenario_matches(vec![ConformanceRel::Read]));
}
