loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue374_enum_constructor_match.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Debug, Clone, PartialEq)]
pub enum ConformanceRel {
    Read,
    Filter,
    Project,
}
impl incan_std_core::reflection::HasTypeClassName for ConformanceRel {
    fn __class_name__() -> &'static str {
        "ConformanceRel"
    }
}
impl ConformanceRel {
    pub fn message(&self) -> String {
        match self {
            Self::Read => "Read".to_string(),
            Self::Filter => "Filter".to_string(),
            Self::Project => "Project".to_string(),
        }
    }
}
pub fn relation_kind_name_from_conformance(rel: ConformanceRel) -> String {
    let _ = match rel {
        ConformanceRel::Read => {
            return "ReadRel".to_string();
        }
        ConformanceRel::Filter => {
            return "FilterRel".to_string();
        }
        ConformanceRel::Project => {
            return "ProjectRel".to_string();
        }
        _ => {
            return "UnknownRel".to_string();
        }
    };
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = println!(
        "{}", relation_kind_name_from_conformance(ConformanceRel::Filter.clone())
    );
}
