loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue380_len_comparison.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub fn small(xs: Vec<i64>) -> bool {
    return ::std::convert::identity(xs.len() as i64) < 2;
}
#[derive(Clone, Debug, PartialEq)]
pub enum ExprKind {
    Column,
    Add,
}
impl incan_std_core::reflection::HasTypeClassName for ExprKind {
    fn __class_name__() -> &'static str {
        "ExprKind"
    }
}
impl ExprKind {
    pub fn message(&self) -> String {
        match self {
            Self::Column => "Column".to_string(),
            Self::Add => "Add".to_string(),
        }
    }
}
#[derive(Clone, Debug, incan_derive::FieldInfo, incan_derive::IncanClass)]
pub struct Expr {
    pub kind: ExprKind,
    pub column_name: String,
    pub arguments: Vec<Expr>,
}
impl incan_std_core::reflection::HasClassName for Expr {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_std_core::reflection::HasTypeClassName for Expr {
    fn __class_name__() -> &'static str {
        "Expr"
    }
}
impl incan_std_core::reflection::HasFieldMetadata for Expr {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_std_core::reflection::HasTypeFieldMetadata for Expr {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 3] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("kind"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("kind"),
                type_name: incan_std_core::frozen::FrozenStr::new("ExprKind"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("column_name"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("column_name"),
                type_name: incan_std_core::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("arguments"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("arguments"),
                type_name: incan_std_core::frozen::FrozenStr::new("list[Expr]"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl Expr {
    /// Returns field metadata for this type.
    pub fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 3] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("kind"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("kind"),
                type_name: incan_std_core::frozen::FrozenStr::new("ExprKind"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("column_name"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("column_name"),
                type_name: incan_std_core::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("arguments"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("arguments"),
                type_name: incan_std_core::frozen::FrozenStr::new("list[Expr]"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
pub fn lower(expr: Expr) -> i64 {
    if expr.kind == ExprKind::Column {
        return 0;
    }
    if ::std::convert::identity(expr.arguments.len() as i64) < 2 {
        return -1;
    }
    return 1;
}
