loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue383_dict_comp_reuses_noncopy_key.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn lengths(names: Vec<String>) -> std::collections::HashMap<String, i64> {
    return ((names).into_iter())
        .map(|name| (name.clone(), incan_std_core::strings::str_len(&(name))))
        .collect::<std::collections::HashMap<_, _>>();
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let values = lengths(vec!["alice".to_string(), "bob".to_string()]);
    let _ = println!(
        "{}", * incan_std_core::collections::dict_get(& values, < _ as AsRef < str >>
        ::as_ref(& "alice"))
    );
}
