loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue389_for_tuple_unpack_enumerate.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Binding {
    name: String,
    output_index: i64,
    expr_index: i64,
}
impl incan_std_core::reflection::HasClassName for Binding {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_std_core::reflection::HasTypeClassName for Binding {
    fn __class_name__() -> &'static str {
        "Binding"
    }
}
impl incan_std_core::reflection::HasFieldMetadata for Binding {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_std_core::reflection::HasTypeFieldMetadata for Binding {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 3] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("name"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("name"),
                type_name: incan_std_core::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("output_index"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("output_index"),
                type_name: incan_std_core::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("expr_index"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("expr_index"),
                type_name: incan_std_core::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_std_core::reflection::HasFieldValueReflection for Binding {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "name" => Some(format!("{}", self.name)),
            "output_index" => Some(format!("{}", self.output_index)),
            "expr_index" => Some(format!("{}", self.expr_index)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![
            ("name".to_string(), format!("{}", self.name)), ("output_index".to_string(),
            format!("{}", self.output_index)), ("expr_index".to_string(), format!("{}",
            self.expr_index))
        ]
    }
}
fn field_ref(index: i64) -> i64 {
    return index;
}
pub fn bind(xs: Vec<String>) -> Vec<Binding> {
    let mut out: Vec<Binding> = Vec::<Binding>::new();
    for (idx, name) in xs
        .iter()
        .enumerate()
        .map(|(idx, value)| (idx as i64, value.clone()))
    {
        let _ = out
            .push(Binding {
                name: name.to_string(),
                output_index: idx,
                expr_index: field_ref(idx),
            });
    }
    return out.clone();
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = bind(vec!["a".to_string(), "bb".to_string()]);
}
