loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue391_list_str_append_literal.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub fn columns(input_columns: Vec<String>) -> Vec<String> {
    let mut columns: Vec<String> = Vec::<String>::new();
    let _ = columns
        .push(incan_std_core::collections::list_get(&input_columns, (0) as i64).clone());
    let _ = columns.push("count".to_string());
    return columns.clone();
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = columns(vec!["orders_total".to_string()]);
}
