loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue459_rust_enum_pattern_import.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use ::substrait::proto::Rel;
use ::substrait::proto::rel::RelType;
pub fn inspect(rel: Rel) {
    let _ = match rel.rel_type.clone() {
        Some(RelType::Read(_)) => {
            let _ = ();
        }
        _ => {
            let _ = ();
        }
    };
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = ();
}
